--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "gulp-clean-css": "^2.3.2",
     "rimraf": "^2.5.4",
     "browser-sync": "^2.18.6",
+    "gulp-imagemin": "^3.1.1",
+    "imagemin-pngquant" : "^5.0.0",
     "typescript": "^2.1.5",
     "jquery": "^3.1.1"
   },
